feat: metadata tables/classes