@@ -32,7 +32,7 @@
     <url/>
   </scm>
   <properties>
-    <java.version>25</java.version>
+    <java.version>21</java.version>
   </properties>
   <dependencies>
     <dependency>
@@ -84,12 +84,15 @@
             <path>
               <groupId>org.projectlombok</groupId>
               <artifactId>lombok</artifactId>
+              <version>${lombok.version}</version>
             </path>
           </annotationProcessorPaths>
-          <source>25</source>
-          <target>25</target>
-          <compilerArgs>--enable-preview</compilerArgs>
+          <release>21</release>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
       </plugin>
       <plugin>
         <groupId>org.springframework.boot</groupId>
@@ -102,6 +105,26 @@
             </exclude>
           </excludes>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>3.11.2</version>
+        <configuration>
+          <source>${java.version}</source>
+          <doclint>none</doclint>
+          <failOnError>false</failOnError>
+          <encoding>UTF-8</encoding>
+        </configuration>
+        <executions>
+          <execution>
+            <id>generate-javadocs</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>javadoc</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
